add new video to project page

--- a/index.html
+++ b/index.html
@@ -56,11 +56,14 @@
             </div>           
         </div>
         <div class="projects">
-            <img class="project-background-top" src="./images/andrea/project-background-top.png" alt="">
-            <h1 class="header">Projects</h1>
+            <div>
+                <img class="project-background-top" src="./images/andrea/project-background-top.png" alt="">
+                <h1 class="header">Projects</h1>
+            </div>
+
             <div class="project-preview">
-                <p class="project-title">Nyum Nyum - Recipes website</p>
-                <video src="./video/nyumnyum.mov" autoplay="autoplay" loop="loop" muted="muted"></video>             
+                <p class="project-title">BCIT D3 - En / Fr Languages</p>
+                <video src="./video/bcit-d3.mov" autoplay="autoplay" loop="loop" muted="muted"></video>             
             </div>
             <div class="project-design">
                 <div class="photoshop">
