style 'projects' section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         and polishing my knowkongde in developing at BCIT.
                     </p>
                     <div class="social-icons">
-                        <a href="https://www.linkedin.com/in/andrea-wu-zheng-085704232/" class="fa fa-linkedin"></a>
+                        <a href="https://www.linkedin.com/in/andrea-wu-085704232/" class="fa fa-linkedin"></a>
                         <a href="https://github.com/Andreawz3" class="fa fa-github"></a>
                         <a href="https://www.facebook.com/lix.ng.7528" class="fa fa-facebook"></a>
                         <a href="https://www.instagram.com/lixng.3/" class="fa fa-instagram"></a>
@@ -38,9 +38,9 @@
                 I'm from Venezuela. I've been in Vancouver for almost five years. 
                 I became a mom for over a year. I'm currently attending BCIT in the program Digital,
                  Design and Development hoping to graduate by 2024.
-                I'm from Venezuela. I've been in Vancouver for almost five years. I like to go hiking, 
-                camping and kayaking. Also, I became mom for over a year. I'm currently attending BCIT 
-                in the program Digital, Design and Development hoping to graduate at 2024.
+                 I'm an open-minded and fast-learning web developer. I've designed and created web 
+                 applications and pages using JavaScript, HTML, CSS and Next.js, also created realistic 
+                 drawings and Vector 3D artwork using Adobe Illustrator tools. 
             </p>
             <img class="about-triangles" src="./images/andrea/bunch-of-triangles.png" alt="">
         </div>
@@ -49,35 +49,31 @@
             <div class="edu-info">
                 <div class="school-info">
                     <img src="./images/andrea/bcit.png" alt="">
-                    <img src="./images/andrea/espiritu-santo.png" alt="">
                     <img src="./images/andrea/south-hill.png" alt="">
+                    <img src="./images/andrea/espiritu-santo.png" alt="">
                 </div>
                 <img class="trophy" src="./images/andrea/edu-img01.png" alt="">
             </div>           
         </div>
         <div class="projects">
-            <div>
+            <div class="projects__headline">
                 <img class="project-background-top" src="./images/andrea/project-background-top.png" alt="">
                 <h1 class="header">Projects</h1>
             </div>
 
             <div class="project-preview">
-                <p class="project-title">BCIT D3 - En / Fr Languages</p>
-                <video src="./video/bcit-d3.mov" autoplay="autoplay" loop="loop" muted="muted"></video>             
+                <a href="https://mdia-2109-class10-language-translador.vercel.app/" class="project-title">BCIT D3 - En / Fr Languages</a>
+                <video src="./video/bcit-d3.mov" autoplay="autoplay" loop="loop" muted="muted"></video>       
             </div>
             <div class="project-design">
-                <div class="photoshop">
-                    <img src="./images/andrea/book-cover.png" alt="">
-                    <p>Book's Cover Photoshop</p>
+                <div class="nextjs">
+                    <img src="./images/andrea/nextjs.png" alt="responsive-website-img">
+                    <a href="https://assignment-1-playwright-site-a01303971.vercel.app/">Next.js Template - Responsive Webpage</a>
                 </div>
-                <div class="realistic">
-                    <img src="./images/andrea/realistic-draw.png" alt="">
-                    <p>Realistic Drawing Illustrador</p>
-                </div>
-                <div class="creative">
-                    <img src="./images/andrea/creative-draw.png" alt="">
-                    <p>Creative Drawing Illustrador</p>
-                </div>                              
+                <div class="boks2-go">
+                    <img src="./images/andrea/bok's2go.png" alt="pickup-restaurant-website-img">
+                    <a href="https://boks2-go.vercel.app/">Bok's 2 Go - Pick Up Restaurant</a>
+                </div>                         
             </div>
         </div>
         <div class="hobbies">
@@ -97,5 +93,14 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div>
+            <p>Copyright © Andrea Wu.</p>
+        </div>
+        <div>
+            <p>Contact Info:</p>
+            <p>Email: awuzheng@my.bcit.ca</p>
+        </div>
+    </footer>
 </body>
 </html>
